--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flybywiresim/eslint-config",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "ESLint configuration used by FlyByWire Simulations projects ",
   "main": "index.js",
   "author": "FlyByWire Simulations",
@@ -16,7 +16,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4"
   },
   "peerDependencies": {
     "eslint": "^7.21.0"
